resources/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink
  namespace: shlink
  labels:
    app.kubernetes.io/name: shlink
    app.kubernetes.io/instance: shlink
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: shlink
      app.kubernetes.io/instance: shlink
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shlink
        app.kubernetes.io/instance: shlink
    spec:
      serviceAccountName: shlink
      containers:
        - name: shlink
          image: "shlinkio/shlink:3.7.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /rest/v2/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 60
          resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink-web-client
  namespace: shlink
  labels:
    app: shlink-web-client
    app.kubernetes.io/name: shlink-web-client
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: shlink-web-client
      app.kubernetes.io/name: shlink-web-client
  template:
    metadata:
      labels:
        app: shlink-web-client
        app.kubernetes.io/name: shlink-web-client
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      restartPolicy: Always
      containers:
        - name: shlink-web-client
          image: shlinkio/shlink-web-client:4.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
              hostPort: null
          livenessProbe:
            httpGet:
              port: 8080
              path: /
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: 8080
              path: /
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            successThreshold: 2
            timeoutSeconds: 5
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            failureThreshold: 60
            successThreshold: 1
            timeoutSeconds: 2
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 4000m
              memory: 8Gi
          securityContext:
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add:
                - NET_BIND_SERVICE
                - CHOWN
                - SETUID
                - SETGID
                - FOWNER
                - DAC_OVERRIDE
              drop:
                - ALL
