resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shlink-mariadb
  namespace: shlink
  labels:
    app: "mariadb"
    component: "master"
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  selector:
    app: "mariadb"
    component: "master"
---
apiVersion: v1
kind: Service
metadata:
  name: shlink-service
  namespace: shlink
  labels:
    app.kubernetes.io/name: shlink
    app.kubernetes.io/instance: shlink
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: shlink
    app.kubernetes.io/instance: shlink
---
apiVersion: v1
kind: Service
metadata:
  name: shlink-web-client
  namespace: shlink
  labels:
    app: shlink-web-client
    app.kubernetes.io/name: shlink-web-client
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: shlink-web-client
